# subliminal_learning_Vyshak

./: .gitignore  README.md  cloud_master_h100.ipynb  pyproject.toml  run_real_mgnify.py
docs/: Architecture.md  Experiment_Report_10_Epoch.md  Experiment_Report_1_Epoch.md  Introduction.md  Metagenomic_VAE_MoE_Report.md  Notes_for_Vyshak_and_Hannah.docx  README_COLAB.md  VSCODE_COLAB.md
scratch/: analyze_perplexity.py  analyze_results.py
scripts/: plot_pca.py  plot_results.py  run_demo.py  visualize_results.py
src/: hierarchical_moe_lm.py  hierarchical_sample_lm.py  make_synthetic_samples.py  ssm_sample_lm.py  ssmoe_sample_lm.py  subliminal_sample_lm.py
src/models/: architectures.py  moe.py  transformers.py
src/utils/: io.py  metrics.py
