[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subliminal_learning"
version = "1.0.0"
description = "A Subliminal Metagenomics Language Model with Hierarchical Mixture-of-Experts"
authors = [{name = "Vyshak Athreya", email = "vyshakathreya@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "mypy"
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
